--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 target/
 project/
 .idea/
 *.log
 *.iml
+*/*.log
+*/*.class
+*/*.cache
